--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5178,6 +5178,24 @@ a:hover {
   }
 }
 
+@media (max-width: 768px) {
+  .greedy-nav.nav-open .visible-links {
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    position: absolute;
+    top: 60px; /* حسب ارتفاع الهيدر */
+    right: 0;
+    width: 100%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 10px 0;
+    z-index: 999;
+  }
+  .greedy-nav.nav-open .visible-links li {
+    padding: 10px;
+    text-align: center;
+  }
+}
 /* تنسيق صفحة الأرشيف */
 .archive {
   text-align: right;
