--- a/_sass/custom/_archive.scss
+++ b/_sass/custom/_archive.scss
@@ -1,4 +1,4 @@
-/* تنسيق صفحة الأرشيف */
+/* ---------- تنسيق صفحة الأرشيف ---------- */
 .archive {
   text-align: right;
 }
@@ -12,7 +12,7 @@
 
 .archive ul {
   list-style: none;
-  padding-right: 0; /* تصحيح للغة العربية */
+  padding-right: 0;
 }
 
 .archive .post-date {
