--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5177,7 +5177,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .masthead__menu-toggle {
-  font-size: 1.5rem;
+  font-size: 0.95rem;
   color: #007bff; /* أزرق هادئ */
   background: none;
   border: none;
@@ -5199,11 +5199,14 @@ h1, h2, h3, h4, h5, h6, p {
 }
 .greedy-nav .visible-links {
   display: flex;
-  gap: 20px;
+  gap: 10px;
 }
 @media (max-width: 768px) {
   .greedy-nav .visible-links {
     display: none;
+  }
+  .greedy-nav .greedy-nav .visible-links li {
+    flex-shrink: 1;
   }
   .greedy-nav.nav-open .visible-links {
     display: flex;
