--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -10,7 +10,20 @@
     <nav id="site-nav" class="greedy-nav">
       <ul class="visible-links">
         {% for link in site.data.navigation.main %}
-          <li><a href="{{ link.url | relative_url }}">{{ link.title }}</a></li>
+          {% if link.children %}
+            <li class="dropdown">
+              <a href="{{ link.url | relative_url }}" class="nav-link dropdown-toggle">
+                {{ link.title }}
+              </a>
+              <ul class="dropdown-menu">
+                {% for child in link.children %}
+                  <li><a href="{{ child.url | relative_url }}">{{ child.title }}</a></li>
+                {% endfor %}
+              </ul>
+            </li>
+          {% else %}
+            <li><a href="{{ link.url | relative_url }}">{{ link.title }}</a></li>
+          {% endif %}
         {% endfor %}
       </ul>
     </nav>
