--- a/_sass/custom/_header.scss
+++ b/_sass/custom/_header.scss
@@ -50,7 +50,6 @@
     .greedy-nav .visible-links li {
   flex-shrink: 1;
 }
-
     &.nav-open .visible-links {
       display: flex;
       flex-direction: column;
@@ -76,4 +75,39 @@
 .greedy-nav .visible-links li a:hover {
   color: #d67e2c; /* لون hover */
 }
+
+/* نمط القائمة المنسدلة */
+.dropdown {
+  position: relative;
+
+  .dropdown-menu {
+    display: none;
+    position: absolute;
+    right: 0;
+    background: white;
+    border: 1px solid #ddd;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    z-index: 1000;
+    min-width: 200px;
+
+    li a {
+      display: block;
+      padding: 0.5em 1em;
+      text-decoration: none;
+      color: #333;
+    }
+
+    li a:hover {
+      background: #f0f0f0;
+    }
+  }
+
+  &:hover .dropdown-menu {
+    display: block;
+  }
+}
+
+
 
