--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -9,32 +9,22 @@
     <!-- روابط التنقل -->
     <nav id="site-nav" class="greedy-nav">
       <ul class="visible-links">
-        {% for link in site.data.navigation.main %}
-          {% if link.children %}
-            <li class="dropdown">
-              <a href="{{ link.url | relative_url }}" class="nav-link dropdown-toggle">
-                {{ link.title }}
-              </a>
-              <ul class="dropdown-menu">
-                {% for child in link.children %}
-                  <li><a href="{{ child.url | relative_url }}">{{ child.title }}</a></li>
-                {% endfor %}
-              </ul>
-            </li>
-          {% else %}
-            <li><a href="{{ link.url | relative_url }}">{{ link.title }}</a></li>
-          {% endif %}
+        {% for link in site.data.navigation %}
+  {% if link.children %}
+    <li class="dropdown">
+      <a href="{{ link.url | relative_url }}" class="dropdown-toggle">{{ link.title }}</a>
+      <ul class="dropdown-menu">
+        {% for child in link.children %}
+          <li><a href="{{ child.url | relative_url }}">{{ child.title }}</a></li>
         {% endfor %}
       </ul>
+    </li>
+  {% else %}
+    <li><a href="{{ link.url | relative_url }}">{{ link.title }}</a></li>
+  {% endif %}
+{% endfor %}
+      </ul>
     </nav>
-</div>
-  <div class="readers-dropdown">
-  <button class="readers-dropbtn">📚 دفتر القراء</button>
-  <div class="readers-dropdown-content">
-    <a href="/messages-des-lecteurs/">💌 رسائل القراء</a>
-    <a href="/espace-silencieux/">✍️ مساحة صامتة</a>
-    <a href="/question-du-mois/">✨ سؤال الشهر</a>
-  </div>
 </div>
 </header>
 
