--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -9,10 +9,12 @@
     <!-- روابط التنقل -->
     <nav id="site-nav" class="greedy-nav">
       <ul class="visible-links">
-        {% for link in site.data.navigation %}
+       {% for link in site.data.navigation %}
   {% if link.children %}
     <li class="dropdown">
-      <a href="{{ link.url | relative_url }}" class="dropdown-toggle">{{ link.title }}</a>
+      <a href="#" class="dropdown-toggle" onclick="event.preventDefault(); this.parentElement.classList.toggle('open');">
+        {{ link.title }}
+      </a>
       <ul class="dropdown-menu">
         {% for child in link.children %}
           <li><a href="{{ child.url | relative_url }}">{{ child.title }}</a></li>
