--- a/_sass/custom/_general.scss
+++ b/_sass/custom/_general.scss
@@ -40,3 +40,11 @@ ul, ol, li {
 h1, h2, h3, h4, h5, h6, p {
   text-align: right;
 }
+/* داخل _custom.scss أو _general.scss */
+.icon-only-mobile {
+  display: inline;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
