deploy: 42a557a84b0eddc80ce1bea6597943de1113e838

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5218,7 +5218,7 @@ h1, h2, h3, h4, h5, h6, p {
   .greedy-nav .greedy-nav .visible-links li {
     flex-shrink: 1;
   }
-  .greedy-nav.nav-open .visible-links {
+  .greedy-nav .greedy-nav.nav-open .visible-links {
     display: flex;
     flex-direction: column;
     background: #ffffff;
